--- a/Eddy/packages.config
+++ b/Eddy/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Costura.Fody" version="5.0.0-alpha0281" targetFramework="net472" developmentDependency="true" />
-  <package id="Fody" version="6.2.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
+  <package id="Fody" version="4.2.1" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="Mono.Cecil" version="0.11.3" targetFramework="net472" />
