--- a/Eddy/packages.config
+++ b/Eddy/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
-  <package id="Fody" version="4.2.1" targetFramework="net472" developmentDependency="true" />
+  <package id="ILMerge" version="3.0.41" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="Mono.Cecil" version="0.11.3" targetFramework="net472" />
+  <package id="MSBuild.ILMerge.Task" version="1.1.3" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
